# halp_access_driver

./: .gitignore  CMakeLists.txt  README.md
km/: CMakeLists.txt  get_kernel_base.asm  halp_structs.h  kernel_structs.h  kprcb.h  main.cpp  main.h
um/: CMakeLists.txt  main.cpp  main.h
